--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.11.3"
   },
   "engines": {
     "node": ">=18.0.0"
